# adftool

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  H5make_libsettings_true_main.c  Makefile.am  NEWS  PKGBUILD.example  README  README.md  adftool.scm  bootstrap-bootstrap  bootstrap.conf  build-adftool  build-gmp  build-hdf5  build-libcheck  cfg.mk  conanfile-in.py  configure.ac  devel.scm  gitlab-ci-apt-cache.conf  guix.scm  malloc.c  package.json.in  realloc.c
.github/workflows/: c-cpp.yml  emscripten.yml  pages.yml
conf/: distributions
debian/: changelog  control  rules
doc/: adftool.texi
include/: adftool.h  bplus.h
lib/: Makefile.am  relocatable.h
po/: POTFILES.in  Rules-install-local  adftool.pot  fr.po
public/mingw64/include/: H5ACpublic.h  H5AbstractDs.h  H5Alltypes.h  H5Apublic.h  H5ArrayType.h  H5AtomType.h  H5Attribute.h  H5Classes.h  H5CommonFG.h  H5CompType.h  H5Cpp.h  H5CppDoc.h  H5Cpublic.h  H5DOpublic.h  H5DSpublic.h  H5DaccProp.h  H5DataSet.h  H5DataSpace.h  H5DataType.h  H5DcreatProp.h  H5Dpublic.h  H5DxferProp.h  H5ESpublic.h  H5EnumType.h  H5Epubgen.h  H5Epublic.h  H5Exception.h  H5FDcore.h  H5FDdirect.h  H5FDfamily.h  H5FDhdfs.h  H5FDlog.h  H5FDmirror.h  H5FDmpi.h  H5FDmpio.h  H5FDmulti.h  H5FDpublic.h  H5FDros3.h  H5FDs3comms.h  H5FDsec2.h  (+68 more)
public/mingw64/include/static/: h5a.mod  h5d.mod  h5e.mod  h5f.mod  h5i.mod  h5im.mod  h5l.mod  h5lt_const.mod  h5o.mod  h5p.mod  h5t.mod  h5z.mod  hdf5.mod
public/mingw64/lib/: libhdf5.settings
public/mingw64/lib/cmake/: hdf5-config.cmake  hdf5-targets-release.cmake  hdf5-targets.cmake  libaec-config-version.cmake  libaec-config.cmake
public/mingw64/lib/pkgconfig/: hdf5.pc  hdf5_cpp.pc  hdf5_fortran.pc  hdf5_hl.pc  hdf5_hl_cpp.pc  hdf5_hl_fortran.pc
src/: adftool-mt.c  adftool.c  adftool_bplus.h  adftool_bplus_cache.h  adftool_bplus_key.h  adftool_bplus_node.h  adftool_grow.h  adftool_hdf5.h  adftool_insert.h  adftool_lookup.h  adftool_private.h  adftool_python.c  adftool_r.cc  bplus_tree_empty_lookup_example.c  bplus_tree_gets_initialized.c  bplus_tree_grow_example.c  bplus_tree_grow_file_example.c  bplus_tree_insert_example.c  bplus_tree_lookup_example.c  channel_metadata_example.c  channel_metadata_unit_test.c  check_bplus.c  check_channel_processor.c  check_channel_processor_group.c  check_fine_eeg_get_data.c  check_generated_file.c  check_lookup_pagination.c  data_file_example.c  date_parser_example.c  dictionary_example.c  dictionary_unit_test.c  eeg_data_example.c  eeg_metadata_example.c  encoding_unit_test.c  file_open_example.c  filter_example.c  filter_test_coef.csv  filter_test_data.R  multi_statement_example.c  simple_filters.c  (+9 more)
src/js/: adftool.mjs  adftool_binding.mjs  adftool_file.mjs  adftool_fir.mjs  adftool_timespec.mjs  package.json.in  test.mjs
src/libadftool/: array.c  bplus_key.c  channel_decoder.h  channel_metadata.c  channel_processor.h  channel_processor_group.c  channel_processor_group.h  dictionary.c  dictionary_bytes.h  dictionary_cache.h  dictionary_index.h  dictionary_strings.h  eeg_data.c  eeg_metadata.c  emscripten.cpp  file.c  file.h  fir.c  generate.h  grow.c  hdf5.c  indices.c  insert.c  lexer.l  literal_filter_iterator.h  lookup.c  not-hdf5.c  parameters.c  parser.c  quads.h  quads_index.h  results.c  statement.c  statement.h  term.c  term.h  version.c
src/libbplus/: bplus_analyzer.h  bplus_divider.h  bplus_explorer.h  bplus_fetch.h  bplus_fetcher.h  bplus_find.h  bplus_finder.h  bplus_growth.h  bplus_hdf5.h  bplus_insert.h  bplus_insertion.h  bplus_key.h  bplus_node.h  bplus_parent_fetcher.h  bplus_prime.h  bplus_range.h  bplus_reparentor.h  bplus_tree.h
tests/: Makefile.am
